# learn_rs.compass.x00_beginner

./: .gitignore  Cargo.toml  README.md
x00_setup/: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
x00_setup/src/main/rs/x00_setup/: lib.rs  main.rs
x00_setup/src/test/rs/x00_setup/: lib.rs
